--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,118 @@
     display: none;
 }
 
+
+.sliderbutton{
+    background-color: #FED50A;
+    color: #000;
+}
+
+.sliderbutton:hover{
+    color: #fff;
+    border: 1px solid #fff;
+    background-color: #000;
+}
+
+.black{
+    background-color: #000;
+    background-image: url("https://cdn.eso.org/images/screen/eso1132e.jpg");
+    opacity: 0.94;
+}
+
+.whitetitle{
+    color: #fff;
+}
+
+.starwarscard{
+    background: rgb(31,31,31);
+    background: radial-gradient(circle, rgba(31,31,31,1) 0%, rgba(45,45,45,1) 48%, rgba(0,0,0,1) 100%);
+}
+
+.darkcard{
+    color: #fff;
+}
+
+.iconbutton{
+    background-color: #FED50A;
+    color: #000;
+
+}
+
+.iconbutton:hover{
+    color: #fff;
+    border: 1px solid #fff;
+    background-color: #000;
+}
+
+.btn {
+    font-weight: 900;
+}
+
+#planets{
+    margin-top: 70px;
+}
+
+.blackbackground{
+    background: #000;
+}
+
+.btn-primary{
+    background-color: #FED50A;
+    border: 1px solid #FED50A;
+    color: #000;
+}
+
+.btn-primary:hover{
+    background-color: #000;
+    color: #fff;
+    border: 1px solid #fff;
+}
+.btn-primary:visited{
+    background-color: #000;
+    color: #fff;
+    border: 1px solid #fff;
+}
+
+.badge{
+    background-color: #000;
+    color: #fff;
+    border: 1px solid #fff;
+}
+
+.badge:hover{
+    background-color: #FED50A;
+    color: #000;
+}
+
+
+
+.btn-primary:focus {
+    background-color: #FED50A;
+    color: #000;
+}
+
+.dropdown-menu{
+    background-color: #FED50A;
+}
+
+.transparentbox{
+    background-color: #2c2c2cf3;
+    border-radius: 9px;
+    color: #fff;
+}
+
+.transparentbox2{
+    background-color: #2c2c2cf3;
+    border-radius: 9px;
+    color: #fff;
+    padding: 10px;
+    margin: 5px;
+}
+
+.fullheight{
+    min-height: 90vh;
+}
+
+.capson{
+    text-transform: capitalize;
+}
